Bug 149255 - qt5/kf5: ibus/kfml: Characters are not "swallowed" after completing complex letter
Summary: qt5/kf5: ibus/kfml: Characters are not "swallowed" after completing complex l...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2022-05-24 07:16 UTC by Michael Weghorn
Modified: 2022-05-28 14:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2022-05-24 07:16:39 UTC
This is essentially tdf#85912, just for the qt5/kf5 VCL plugin.

Steps to reproduce:

1) set up ibus/kfml with the GE profile (s. steps below)
2) start LO Writer with the kf5 VCL plugin
3) select the "GE" profile in ibus/kfml set up earlier
4) type this sequence (not including the quotes): "_;]"
   * note: for German keyboard layout and the GE profile enabled, press the keystrokes that would insert "?ö+" if the input method were not enabled
5) observe the result

Actual result: 
The doc contains this text: "_;ɔ̱̈"

Expected result:
The doc should only contain this text: "ɔ̱̈" (because all other characters should be "swallowed"/replaced according to the definition in the "GE" profile for the ibus-kfml input method.

---

Steps I took to set up ibus-kfml on Debian testing in a Plasma X11 session:

* install `ibus-kmfl` (I had also installed `keyman` and `ibus-keyman`, but that shouldn't be necessary, but are the "more modern" tools)
* create directory: `mkdir ~/.kmfl`
* download `GE.kmn`: attachment 116069 [details]
* put the file into `~/.kmfl`
* compile the file: `cd ~/.kmfl; kmflcomp GE.kmn`
* restart ibus-daemon

    ibus restart

* ignore the message about the missing icon (alternatively, comment out the `BITMAP "GE.bmp"` line in the `GE.kmn` file before compiling above)

* add input method:
    * start `ibus-setup`
    * go to "Input Method" tab, "Add" -> "Other" -> "General" (with the "KMFL" icon next to it)

* select the input method, e.g. from the KDE Plasma panel for IBus

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: f817b3de1aa827d93e2a622735c4d570514f4849
CPU threads: 12; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2022-05-24 07:17:48 UTC
I came across this while looking into tdf#147084, will submit a patch to Gerrit.
Comment 2 Michael Weghorn 2022-05-24 07:47:39 UTC
(In reply to Michael Weghorn from comment #0)
> * download `GE.kmn`: attachment 116069 [details]

FWIW, that key mapping is from bug 91641, and that one has links to more IM-related bug reports, so that might be a good starting point in case there is interest in digging deeper into the IM topic and retesting more things for qt5/kf5...
Comment 3 Michael Weghorn 2022-05-24 09:42:48 UTC
(In reply to Michael Weghorn from comment #1)
> I came across this while looking into tdf#147084, will submit a patch to
> Gerrit.

-> https://gerrit.libreoffice.org/c/core/+/134855
Comment 4 Commit Notification 2022-05-28 14:10:11 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/217ca9c79d75912df3fb735def4b64b0a7284e30

tdf#149255 qt: Implement deletion/"swallowing" for IM replacement

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.