tdf#149255 qt: Implement basic deletion/"swallowing" for IM replacement

This implements deletion of the text specified by the
`replacementStart()` and `replacementLength()` of the
`QInputMethodEvent*` received in `QtWidget::inputMethodEvent`.

Quoting from the `QInputMethodEvent` doc [1]:

> When receiving an input method event, the text widget has to performs
> the following steps:
>
> 1. If the widget has selected text, the selected text should
>    get removed.
> 2. Remove the text starting at replacementStart() with length
>    replacementLength() and replace it by the commitString().
> [...]

This implementation is sufficient for the scenario described in tdf#149255,
but I didn't test any more complex scenarios, like one where text is selected,
which might perhaps need a different key mapping definition,... (?)
(My current knowledge of input methods is too limited to be able to do
more extensive testing without first spending time to get deeper into
the topic.)

The gtk3 implementation in
`GtkSalFrame::IMHandler::signalIMDeleteSurrounding`
was very helpful to get an impression of what needs to be done.

[1] https://doc.qt.io/qt-5/qinputmethodevent.html

Change-Id: I2a34e58067e253c39dbd87905943134bdfa4ea27